[package]
name = "xp-audio"
version = "0.1.0"
authors = ["TheOnlyMrCat <signupforforums5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
ringbuf = "0.2.2"
sdl2 = { version = "0.34.3", features = [ "image", "ttf", "unsafe_textures" ]}
