[package]
name = "xp-audio"
version = "0.1.0"
authors = ["TheOnlyMrCat <signupforforums5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
ringbuf = "0.2.2"
relm = "0.20.0"
relm-derive = "0.20.0"
gtk = "0.9.2"
